# AndroidToolBox

./: .gitignore  .gitmodules  Cargo.toml  README.md  build on AHA.py  build.py  check.py  ezbuild.bat  ezdebug.bat  package-lock.json  package.json  requirements.txt  test.py
.github/workflows/: ci.yml  deploy.yml
conf/: build.conf
docs/: examples.md  index.md
docs/.vitepress/: config.js
docs/en/: api-examples.md  examples.md  index.md
flutter/atb_ui/: README.md  atb_ui_config.json  atb_ui_tools.json  flutter_build_verbose.txt  pubspec.yaml  tmp_lines.txt
flutter/atb_ui/native/pseudoconsole/: CMakeLists.txt  pseudoconsole_host.cpp
src/: SuperRepair.py  __init__.py  _requirements.py  build.conf  build_info.py  check.py  config.json  debughook.py  down_xtcpatch.py  down_xtcpatch.py_LICENSE.txt  flash_ak3.py  launch.cpp  launch.h  launch.rc  logo.txt  menu.py  repair.py  run_cmd.py  start.py  test_flash_ak3.py  test_run_env.py
src/bats/: QSaharaServer.bat  Xposed.bat  adbdevice.bat  automagisk.bat  autosystemplus.bat  backup.bat  boot_completed.bat  check_adb.bat  edlport.bat  fh_loader.bat  friend.bat  innermodel.bat  instapp.bat  instmodule.bat  instmodule2.bat  logo.bat  magiskpatch.bat  miscre.bat  morodevice.bat  nd03root.bat  number.bat  ota.bat  pashroot.bat  pashtwrp.bat  pashtwrppro.bat  patch123.bat  qcom_gbl_root.module.cmd  qcom_gbl_selinux.bat  qfh_loader.bat  qmmi.bat  rebootpro.bat  root-SDK19.bat  root-SDK25.bat  root-SDK27.bat  root.bat  rootpro.bat  runupall.bat  scrcpy-ui.bat  scrcpy.bat  sel.bat  (+11 more)
src/compose/: phoneroot.py  settings.py
src/lolcat/: lib.rs  lolcat.rs  shared.rs
src/pluginutils/: __init__.py  load.py  manage.py  setup.py  swt.py  (+1 more)
test/: test_flash_ak3.py  test_main.py  test_run_env.py
tools/: bg_writer.bat  check_cloud.py  hookATBXTCNOTALLOW.py  test_pause.py
(+19 files in other folders)
