[package]
name = "androidtoolkit-library"
version = "9.9.9"
edition = "2021"
authors = ["Starry2233"]
description = "All-in-one xtc toolbox utility"
license = "Proprietary"
repository = "https://github.com/AllToolBox-SC/AllToolBox"
readme = "README.md"

[[bin]]
name = "lolcat"
path = "src/lolcat/lolcat.rs"

[[bin]]
name = "jsonutil"
path = "src/jsonutil.rs"

[lib]
name = "lolcat_lib"
crate-type = ["cdylib"]
path = "src/lolcat/lib.rs"
  
[dependencies]
clap = { version = "4.5", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

walkdir = "2.5"

pyo3 = { version = "0.20", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
